--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
+    id 'com.google.dagger.hilt.android'
 }
 
 android {
@@ -44,7 +45,7 @@ dependencies {
 
     // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.9.0'
 
     // Dagger Hilt
     implementation 'com.google.dagger:hilt-android:2.42'
@@ -53,4 +54,6 @@ dependencies {
 
     implementation 'com.google.code.gson:gson:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.3")
 }
